--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ Pillow = "^8.1.1"
 Markdown = "3.1.1"
 Faker = "^8.1.2"
 jsmin = "^3.0.0"
+django-cors-headers = "<4.7.0"
 
 [tool.poetry.extras]
 gunicorn = ["gunicorn"]
