--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ Markdown = "3.1.1"
 Faker = "^8.1.2"
 jsmin = "^3.0.0"
 django-cors-headers = "3.13.0"
+boto3 = "<1.28"
 
 [tool.poetry.extras]
 gunicorn = ["gunicorn"]
@@ -82,3 +83,5 @@ exclude = '''
   )/
 )
 '''
+
+
