--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ Pillow = "^8.1.1"
 Markdown = "3.1.1"
 Faker = "^8.1.2"
 jsmin = "^3.0.0"
+b2sdk = "^2.8.1"
 
 [tool.poetry.extras]
 gunicorn = ["gunicorn"]
