--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ Markdown = "3.1.1"
 Faker = "^8.1.2"
 jsmin = "^3.0.0"
 b2sdk = "^2.8.1"
+boto3 = "^1.26"
 
 [tool.poetry.extras]
 gunicorn = ["gunicorn"]
