--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,8 @@ Markdown = "3.1.1"
 Faker = "^8.1.2"
 jsmin = "^3.0.0"
 b2sdk = "^2.8.1"
-boto3 = "^1.26"
+boto3 = "1.26.28"
+botocore = "1.29.28"
 
 [tool.poetry.extras]
 gunicorn = ["gunicorn"]
